Avoid guice illegal injection warning